# vk-fullstack-agents

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_FINDINGS.md  HANDOFF.md  agent_creator_plan.md  docker-compose.yml  mcp_project_plan.md  project_plan.md
.claude/: settings.local.json
.claude/plans/: auth-and-hardening.md
apps/design-model/: Agent Builder.html  VK Agents.html  app.jsx  blocks.jsx  builder.css  builder.jsx  chat.jsx  data.js  icons.jsx  sidebar.jsx  styles.css
apps/web/: next.config.ts  package-lock.json  package.json  proxy.ts
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
apps/web/app/(dashboard)/: error.tsx  layout.tsx
apps/web/app/builder/: builder.css  layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/components/builder/: arrow.tsx  builder-layout.tsx  builder-node.tsx  builder-sidebar.tsx  canvas-controls.tsx  canvas-topbar.tsx  canvas.tsx  inspector.tsx  minimap.tsx  node-icon.tsx  (+4 more)
apps/web/lib/: auth-context.tsx  chat-context.tsx  chat-storage.ts  mock-data.ts  mock-flows.ts  sse-client.ts  use-streaming.ts  use-voice-input.ts
services/agents/: pyproject.toml  requirements.txt
services/agents/app/: config.py  main.py
services/agents/app/agents/: base.py  general.py  inventory.py  registry.py
services/agents/app/llm/: provider.py  schemas.py
services/agents/app/middleware/: auth.py  sap_proxy.py
services/agents/app/routers/: auth.py  chat.py  health.py
services/agents/app/sap/: client.py  exceptions.py  models.py  session.py
services/agents/app/tools/: base.py  sap_inventory.py
(+51 files in other folders)
